[tool.poetry]
name = "treb"
version = "0.1.0"
description = ""
authors = ["hephex <figus.federico@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-run = "^0.3.0"
dulwich = "^0.20.45"
rich = "^12.5.1"
attrs = "^22.1.0"
docker = "^6.0.0"
toml = "^0.10.2"
cattrs = "^22.1.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100