[tool.poetry]
name = "treb"
version = "0.1.0"
description = ""
authors = ["hephex <figus.federico@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-run = "^0.4.0"
dulwich = "^0.20.45"
rich = "^12.5.1"
attrs = "^22.1.0"
docker = "^6.0.0"
toml = "^0.10.2"
cattrs = "^22.1.0"
click = "^8.1.3"
types-toml = "^0.10.8"
Flask = "^2.2.2"
setuptools = "^67.0.0"
google-cloud-monitoring = "^2.11.1"
testfixtures = "^7.0.0"
cloudflare = "^2.10.1"
boto3 = "^1.26.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.'MASTER']
ignore-patterns = ".*_test.py$"

[tool.pylint.'MESSAGES CONTROL']
disable = ["too-few-public-methods"]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4

[tool.bandit]
skips = "B322"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true

ignore_missing_imports = true